--- a/app/pug/index--ru.pug
+++ b/app/pug/index--ru.pug
@@ -8,7 +8,7 @@ body.body#body
   header.header#header
     .container
       .header__wrapper.wrapper
-        a.header__logo.link(href="#") &#9832; marinmar &#9832;
+        a.header__logo.link(href="#") marinmar
         .header__menu.menu
           .menu__icon
             span
@@ -84,7 +84,7 @@ body.body#body
 
   footer.footer#contacts
     .container
-      h2.footer__subtitle.subtitle.animation--fadeInUp &copy; &#9832; marinmar &#9832; &copy;
+      h2.footer__subtitle.subtitle.animation--fadeInUp &copy; marinmar &copy;
       ul.footer__contacts.contacts
         li.contacts__item
           a.contacts__link.link.contacts__link--email(href="mailto:marinmar6@yandex.ru", target="_blank") e-mail: marinmar6@yandex.ru
