--- a/app/pug/parts/footer.pug
+++ b/app/pug/parts/footer.pug
@@ -1,6 +1,6 @@
 footer.footer#contacts
   .container
-    h2.footer__subtitle.subtitle.animation--fadeInUp &copy; &#9832; marinmar &#9832; &copy;
+    h2.footer__subtitle.subtitle.animation--fadeInUp &copy; marinmar &copy;
     ul.footer__contacts.contacts
       li.contacts__item
         a.contacts__link.link.contacts__link--email(
