--- a/app/pug/parts/header.pug
+++ b/app/pug/parts/header.pug
@@ -1,7 +1,7 @@
 header.header#header
   .container
     .header__wrapper.wrapper
-      a.header__logo.link(href="#") &#9832; marinmar &#9832;
+      a.header__logo.link(href="#") marinmar
       .header__menu.menu
         .menu__icon
           span
