add React-Bootstrap Jewelry Store

--- a/app/pug/data/data_works.pug
+++ b/app/pug/data/data_works.pug
@@ -1,6 +1,17 @@
 -
   const worksList = [
     {
+      "title" : "Site fo Jewelry Store",
+      "titleRu" : "Сайт для Ювелирного Магазина",
+      "description" : "Created in React using Bootstrap components. Made according to its own mockup",
+      "descriptionRu" : "Создано в React с использованием компонентов Bootstrap. Выполнено по собственному макету.",
+      "imgSrc" : "img/portfolio_preview_img/010_jewelry_react_bootstrap.png",
+      "imgAlt" : "Site fo Jewelry Store",
+      "imgAltRu" : "Сайт для Ювелирного Магазина",
+      "previewLink" : "https://marin-mar.github.io/007_marin-mar_jewelry.github.io_react_bootstrap",
+      "codeLink" : "https://github.com/marin-mar/007_marin-mar_jewelry.github.io_react_bootstrap",
+    },
+    {
       "title" : "Tribute Page",
       "titleRu" : "Страница - дань уважения",
       "description" : "Tribute Page, first project on course from www.freecodecamp.org \"Responsive Web Design\". It was necessary to create an intro-page, I\'ve decided to dedicate it for my favourite music group \"FFDP\".",
